src/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <formula>IF( ISNULL(Charge_Date__c), Date__c, DATEVALUE(Charge_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Allocated</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Refunded__c</fullName>
        <label>Amount Refunded</label>
        <summarizedField>Refund__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Refund__c.Draft__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Refund__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <label>Charge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date__c</fullName>
        <label>Confirmed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Match with invoice reference</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payout_Date__c</fullName>
        <label>Payout Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Reference</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>&quot;Manual&quot;</defaultValue>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>manual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>go_cardless</fullName>
                </value>
                <value>
                    <fullName>stripe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Draft__c == True, &apos;Draft&apos;,
  IF(Failed__c == True, &apos;Failed&apos;,
    IF(Confirmed__c == False, &apos;Pending&apos;,
      &apos;Paid - &apos;
      &amp;
      IF(Amount_Allocated__c == 0, &apos;Unallocated&apos;,
        IF(Amount_Allocated__c == Amount__c, &apos;Allocated&apos;,
          IF(Amount_Allocated__c &lt; Amount__c, &apos;Partially Allocated&apos;, &apos;&apos;)
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Amount_Allocated__c</columns>
        <columns>Date__c</columns>
        <columns>Charge_Date__c</columns>
        <columns>Confirmed__c</columns>
        <columns>Payout_Date__c</columns>
        <columns>Source__c</columns>
        <columns>Reference__c</columns>
        <columns>Failed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Allocated_Less_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_Allocated__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount_Allocated__c</errorDisplayField>
        <errorMessage>Amount Allocated cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_Allocated_More_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_Allocated__c &gt; Amount__c</errorConditionFormula>
        <errorDisplayField>Amount_Allocated__c</errorDisplayField>
        <errorMessage>Amount Allocated cannot be greater than Payment Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_Is_Positive</fullName>
        <active>true</active>
        <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Amount cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Draft_Confirmed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Confirmed__c = True, Draft__c = True)</errorConditionFormula>
        <errorDisplayField>Confirmed__c</errorDisplayField>
        <errorMessage>A payment cannot be Confirmed whistl it is in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Reverse_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Draft__c == True, NOT(ISNEW()), ISCHANGED(Draft__c))</errorConditionFormula>
        <errorDisplayField>Draft__c</errorDisplayField>
        <errorMessage>Payment cannot be reverted to Draft Status once it has been validated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Zero_Total</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(Draft__c == False, NOT(ISNEW()), ISCHANGED(Draft__c)), Amount__c == 0)</errorConditionFormula>
        <errorMessage>Payment must be Draft if amount is 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Account__c), Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account cannot be changed on a Payment what is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Amount__c), Draft__c = False)</errorConditionFormula>
        <errorMessage>Amount cannot be changed on a Payment that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Confirmed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Confirmed__c), Confirmed__c = False, Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Confirmed__c</errorDisplayField>
        <errorMessage>A payment cannot be un-confirmed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Date__c), Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date cannot be changed on a Payment that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Reference</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Reference__c), Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Reference__c</errorDisplayField>
        <errorMessage>Reference cannot be changed on a Payment that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Source</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Source__c), Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Source__c</errorDisplayField>
        <errorMessage>Source cannot be changed on a Payment that is not Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED(Draft__c) , Draft__c == False, Date__c &lt; DATEVALUE(NOW()))</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Payment Date cannot be in the past</errorMessage>
    </validationRules>
</CustomObject>